# Obsidian_Codec

./: .gitignore  CLI.bat  CLI.sh  LICENSE  README.md  pyproject.toml  requirements.txt  setup.bat  setup.sh  webui.bat  webui.sh
.github/workflows/: ci.yml
obsidian_codec/: __init__.py
obsidian_codec/src/: __init__.py
obsidian_codec/src/cmd_line/: __init__.py  cli.py
obsidian_codec/src/utils/: __init__.py  ffmpeg_utils.py
obsidian_codec/src/web_ui/: __init__.py  webui.py
obsidian_codec/src/web_ui/static/: app.js  style.css
obsidian_codec/src/web_ui/templates/: index.html
obsidian_codec/src/web_ui/templet/: index.html
tests/: __init__.py  test_cli.py  test_ffmpeg_utils.py  test_webui.py
