[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidian-codec"
version = "1.0.0"
description = "A next-gen media transcoding, extraction, and directory watching tool."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask>=3.0.0,<4.0.0",
    "flask-limiter>=3.0.0,<4.0.0",
    "psutil>=5.9.0,<6.0.0",
    "rich>=13.0.0,<14.0.0",
]

[project.scripts]
obsidian-cli = "obsidian_codec.src.cmd_line.cli:main"
obsidian-webui = "obsidian_codec.src.web_ui.webui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["obsidian_codec*"]
